--- a/html/index.html
+++ b/html/index.html
@@ -38,34 +38,52 @@
             </div>
             <div class="enquire">
               <div class="btn-enquire"><i class="iconsp-35-enquire"></i><span>enquire</span></div>
-              <div class="box-enquire row">
+              <form class="box-enquire row">
                 <div class="box-left col-md-3">
                   <div class="title">get in touch</div>
                   <p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
                 </div>
-                <div class="box-center col-md-6">
+                <div class="box-center col-md-5">
                   <div class="form-group row">
                     <div class="col-md-6">
-                      <input type="text" id="usr" class="form-control">
+                      <input type="text" id="usr" placeholder="Name" class="form-control">
                     </div>
                     <div class="col-md-6">
-                      <input type="text" id="usr" class="form-control">
+                      <input type="text" id="usr" placeholder="Phone" class="form-control">
                     </div>
                   </div>
                   <div class="form-group row">
-                    <div class="col-md-3">
-                      <input type="text" id="usr" class="form-control">
+                    <div class="col-md-6">
+                      <input type="text" id="usr" placeholder="Email" class="form-control">
                     </div>
-                    <div class="col-md-3">
-                      <input type="text" id="usr" class="form-control">
+                    <div class="col-md-6">
+                      <div class="select-style">
+                        <select class="size">
+                          <option>Enquire Type</option>
+                          <option>General Enquiry</option>
+                          <option>Quote</option>
+                          <option>Carrers</option>
+                          <option>Other</option>
+                        </select>
+                      </div>
                     </div>
                   </div>
                   <div class="form-group">
-                    <input type="text" id="usr" class="form-control">
+                    <input type="text" id="usr" placeholder="Site Address" class="form-control">
+                  </div>
+                  <div class="form-group">
+                    <input type="text" id="usr" placeholder="Company Name" class="form-control">
+                  </div>
+                  <div class="form-group">
+                    <textarea type="text" id="usr" placeholder="Enquiry" class="form-control"></textarea>
                   </div>
                 </div>
-                <div class="box-right col-md-3"></div>
-              </div>
+                <div class="box-right col-md-3">
+                  <button type="button" class="btn btn-cancel">cancel</button>
+                  <button type="button" class="btn btn-upload">upload files</button>
+                  <button type="button" class="btn btn-submit">submit</button>
+                </div>
+              </form>
             </div>
           </div>
         </div>
