fixed service page

--- a/html/index.html
+++ b/html/index.html
@@ -22,8 +22,8 @@
             <div class="navbar">
               <div class="info"><span>(02)9597 6788</span><span>info@patragroup.con.au</span><span>4/450 West Botany Street, Rockdale NSW, 2216</span></div>
               <ul class="menu">
-                <li><a href="about.html">about</a></li>
-                <li class="service-hover"><a href="services.html">services</a>
+                <li><a href="">about</a></li>
+                <li class="service-hover"><a href="">services</a>
                   <ul class="sub-menu">
                     <li><a href="stainless-steel-fabrication.html" class="scroll">stainless steel fabrication</a></li>
                     <li><a href="refrigeration.html" class="scroll">refrigeration</a></li>
@@ -90,7 +90,7 @@
         <div id="header-mobile" class="header">
           <ul id="menu" class="menu">
             <li><a href="about.html" class="scroll">about</a></li>
-            <li><a href="services.html" class="scroll">services</a>
+            <li><a href="" class="scroll">services</a>
               <ul>
                 <li><a href="" class="scroll">stainless steel fabrication</a></li>
                 <li><a href="" class="scroll">refrigeration</a></li>
@@ -113,30 +113,6 @@
               </ul><a href="tel:0295976788" class="phone-mobile"><i class="iconsp-35-phone-black"></i></a>
             </div>
           </div>
-        </div>
-        <div class="wrapper-main-bxslider">
-          <ul class="main-bxslider">
-            <li><img src="images/slide-1.jpg" height="730">
-              <div class="title">
-                <h3>able to evolve with new design concepts and modern trends.</h3><span>Giving the client the opportunity to capture customers with ease.</span>
-              </div>
-            </li>
-            <li><img src="images/slide-2.jpg" height="730">
-              <div class="title">
-                <h3>able to evolve with new design concepts and modern trends.</h3><span>Giving the client the opportunity to capture customers with ease.</span>
-              </div>
-            </li>
-            <li><img src="images/slide-3.jpg" height="730">
-              <div class="title">
-                <h3>able to evolve with new design concepts and modern trends.</h3><span>Giving the client the opportunity to capture customers with ease.</span>
-              </div>
-            </li>
-            <li><img src="images/slide-4.jpg" height="730">
-              <div class="title">
-                <h3>able to evolve with new design concepts and modern trends.</h3><span>Giving the client the opportunity to capture customers with ease.</span>
-              </div>
-            </li>
-          </ul>
         </div>
       </div>
       <div class="services">
