--- a/html/services.html
+++ b/html/services.html
@@ -14,7 +14,7 @@
     <link href="scss/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <div class="services-page page">
+    <div class="home-page page">
       <div class="slider">
         <div id="header" class="header">
           <div class="container"><a href="index.html" class="logo"><img src="images/logo.png">
@@ -115,7 +115,7 @@
           </div>
         </div>
       </div>
-      <div class="services">
+      <div class="services-page other-page">
         <div class="container">
           <h1 class="title">services</h1>
           <ul class="nav nav-pills nav-justified services-list">
@@ -275,6 +275,15 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="footer">
+        <div class="container">
+          <ul>
+            <li><i class="iconsp-35-facebook"></i><a href="">Privacy Policy</a></li>
+            <li><span>Copyright © 2014 Patra Group Pty Ltd.</span><span>All rights reserved.</span></li>
+            <li><span>Designed by Openseed</span></li>
+          </ul>
         </div>
       </div>
     </div>
