--- a/html/layout.html
+++ b/html/layout.html
@@ -14,6 +14,117 @@
     <link href="scss/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+    <div class="home-page page">
+      <div class="slider">
+        <div id="header" class="header">
+          <div class="container"><a href="index.html" class="logo"><img src="images/logo.png">
+              <div class="logo-traingle"></div></a>
+            <div class="navbar">
+              <div class="info"><span>(02)9597 6788</span><span>info@patragroup.con.au</span><span>4/450 West Botany Street, Rockdale NSW, 2216</span></div>
+              <ul class="menu">
+                <li><a href="">about</a></li>
+                <li class="service-hover"><a href="">services</a>
+                  <ul class="sub-menu">
+                    <li><a href="stainless-steel-fabrication.html" class="scroll">stainless steel fabrication</a></li>
+                    <li><a href="refrigeration.html" class="scroll">refrigeration</a></li>
+                    <li><a href="shopfitting.html" class="scroll">shopfitting</a></li>
+                    <li><a href="catering-equipment.html" class="scroll">catering equipment</a></li>
+                    <li><a href="design-consilation.html" class="scroll">design & consilation</a></li>
+                  </ul>
+                </li>
+                <li><a href="portfolio.html">portfolio</a></li>
+                <li><a href="contact.html">contact</a></li>
+              </ul>
+            </div>
+            <div class="enquire">
+              <div class="btn-enquire"><i class="iconsp-35-enquire"></i><span>enquire</span></div>
+              <form class="box-enquire row">
+                <div class="box-left col-md-3">
+                  <div class="title">get in touch</div>
+                  <p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+                </div>
+                <div class="box-center col-md-5">
+                  <div class="form-group row">
+                    <div class="col-md-6">
+                      <input type="text" id="usr" placeholder="Name" class="form-control">
+                    </div>
+                    <div class="col-md-6">
+                      <input type="text" id="usr" placeholder="Phone" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group row">
+                    <div class="col-md-6">
+                      <input type="text" id="usr" placeholder="Email" class="form-control">
+                    </div>
+                    <div class="col-md-6">
+                      <div class="select-style">
+                        <select class="size">
+                          <option>Enquire Type</option>
+                          <option>General Enquiry</option>
+                          <option>Quote</option>
+                          <option>Carrers</option>
+                          <option>Other</option>
+                        </select>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <input type="text" id="usr" placeholder="Site Address" class="form-control">
+                  </div>
+                  <div class="form-group">
+                    <input type="text" id="usr" placeholder="Company Name" class="form-control">
+                  </div>
+                  <div class="form-group">
+                    <textarea type="text" id="usr" placeholder="Enquiry" class="form-control"></textarea>
+                  </div>
+                </div>
+                <div class="box-right col-md-3">
+                  <button type="button" class="btn btn-cancel">cancel</button>
+                  <button type="button" class="btn btn-upload">upload files</button>
+                  <button type="button" class="btn btn-submit">submit</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+        <div id="header-mobile" class="header">
+          <ul id="menu" class="menu">
+            <li><a href="about.html" class="scroll">about</a></li>
+            <li><a href="" class="scroll">services</a>
+              <ul>
+                <li><a href="" class="scroll">stainless steel fabrication</a></li>
+                <li><a href="" class="scroll">refrigeration</a></li>
+                <li><a href="" class="scroll">shopfitting</a></li>
+                <li><a href="" class="scroll">catering equipment</a></li>
+                <li><a href="" class="scroll">design & consilation</a></li>
+              </ul>
+            </li>
+            <li><a href="portfolio.html" class="scroll">portfolio</a></li>
+            <li><a href="contact.html" class="scroll">contact</a></li>
+            <li><a href="" class="scroll"><i class="iconsp-35-enquire-mobile"></i><span>enquire</span></a></li>
+          </ul>
+          <div id="main-menu"><a href="index.html" class="logo"><img src="images/logo.png">
+              <div class="logo-traingle"></div></a>
+            <div class="contact-mobile">
+              <ul>
+                <li><a href="https://login.live.com/" target="_blank"><i class="iconsp-35-email"></i></a></li>
+                <li><a href="https://www.google.com.au/maps/place/450-464+W+Botany+St,+Rockdale+NSW+2216/@-33.960414,151.145595,17z/data=!3m1!4b1!4m2!3m1!1s0x6b12b756afab412b:0x7be2c525df1e34c" target="_blank"><i class="iconsp-35-location"></i></a></li>
+                <li><a href="tel:0295976788"><i class="iconsp-35-phone-white"></i></a></li>
+              </ul><a href="tel:0295976788" class="phone-mobile"><i class="iconsp-35-phone-black"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer">
+        <div class="container">
+          <ul>
+            <li><i class="iconsp-35-facebook"></i><a href="">Privacy Policy</a></li>
+            <li><span>Copyright © 2014 Patra Group Pty Ltd.</span><span>All rights reserved.</span></li>
+            <li><span>Designed by Openseed</span></li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/jquery.bxslider.min.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
