--- a/html/index.html
+++ b/html/index.html
@@ -114,6 +114,30 @@
             </div>
           </div>
         </div>
+        <div class="wrapper-main-bxslider">
+          <ul class="main-bxslider">
+            <li><img src="images/slide-1.jpg" height="730">
+              <div class="title">
+                <h3>able to evolve with new design concepts and modern trends.</h3><span>Giving the client the opportunity to capture customers with ease.</span>
+              </div>
+            </li>
+            <li><img src="images/slide-2.jpg" height="730">
+              <div class="title">
+                <h3>able to evolve with new design concepts and modern trends.</h3><span>Giving the client the opportunity to capture customers with ease.</span>
+              </div>
+            </li>
+            <li><img src="images/slide-3.jpg" height="730">
+              <div class="title">
+                <h3>able to evolve with new design concepts and modern trends.</h3><span>Giving the client the opportunity to capture customers with ease.</span>
+              </div>
+            </li>
+            <li><img src="images/slide-4.jpg" height="730">
+              <div class="title">
+                <h3>able to evolve with new design concepts and modern trends.</h3><span>Giving the client the opportunity to capture customers with ease.</span>
+              </div>
+            </li>
+          </ul>
+        </div>
       </div>
       <div class="services">
         <div class="container">
@@ -125,10 +149,10 @@
                 </h4>
                 <p><i class="iconsp-steel"></i></p>
                 <ul class="name-list">
-                  <li><span class="dot">.</span><span>Service Name</span></li>
-                  <li><span class="dot">.</span><span>Service Name</span></li>
-                  <li><span class="dot">.</span><span>Service Name</span></li>
-                  <li><span class="dot">.</span><span>Service Name</span></li>
+                  <li><span>Service Name</span></li>
+                  <li><span>Service Name</span></li>
+                  <li><span>Service Name</span></li>
+                  <li><span>Service Name</span></li>
                 </ul></a></li>
             <li><a href="">
                 <h4 class="sub-title"><span>refrigeration</span>
@@ -136,10 +160,10 @@
                 </h4>
                 <p><i class="iconsp-fridge"></i></p>
                 <ul class="name-list">
-                  <li><span class="dot">.</span><span>Service Name</span></li>
-                  <li><span class="dot">.</span><span>Service Name</span></li>
-                  <li><span class="dot">.</span><span>Service Name</span></li>
-                  <li><span class="dot">.</span><span>Service Name</span></li>
+                  <li><span>Service Name</span></li>
+                  <li><span>Service Name</span></li>
+                  <li><span>Service Name</span></li>
+                  <li><span>Service Name</span></li>
                 </ul></a></li>
             <li><a href="">
                 <h4 class="sub-title"><span>shopfitting</span>
@@ -147,10 +171,10 @@
                 </h4>
                 <p><i class="iconsp-shopfitting"></i></p>
                 <ul class="name-list">
-                  <li><span class="dot">.</span><span>Service Name</span></li>
-                  <li><span class="dot">.</span><span>Service Name</span></li>
-                  <li><span class="dot">.</span><span>Service Name</span></li>
-                  <li><span class="dot">.</span><span>Service Name</span></li>
+                  <li><span>Service Name</span></li>
+                  <li><span>Service Name</span></li>
+                  <li><span>Service Name</span></li>
+                  <li><span>Service Name</span></li>
                 </ul></a></li>
             <li><a href="">
                 <h4 class="sub-title"><span>catering equipment</span>
@@ -158,10 +182,10 @@
                 </h4>
                 <p><i class="iconsp-catering"></i></p>
                 <ul class="name-list">
-                  <li><span class="dot">.</span><span>Service Name</span></li>
-                  <li><span class="dot">.</span><span>Service Name</span></li>
-                  <li><span class="dot">.</span><span>Service Name</span></li>
-                  <li><span class="dot">.</span><span>Service Name</span></li>
+                  <li><span>Service Name</span></li>
+                  <li><span>Service Name</span></li>
+                  <li><span>Service Name</span></li>
+                  <li><span>Service Name</span></li>
                 </ul></a></li>
             <li><a href="">
                 <h4 class="sub-title"><span>design & consilation</span>
@@ -169,10 +193,10 @@
                 </h4>
                 <p><i class="iconsp-design"></i></p>
                 <ul class="name-list">
-                  <li><span class="dot">.</span><span>Service Name</span></li>
-                  <li><span class="dot">.</span><span>Service Name</span></li>
-                  <li><span class="dot">.</span><span>Service Name</span></li>
-                  <li><span class="dot">.</span><span>Service Name</span></li>
+                  <li><span>Service Name</span></li>
+                  <li><span>Service Name</span></li>
+                  <li><span>Service Name</span></li>
+                  <li><span>Service Name</span></li>
                 </ul></a></li>
           </ul>
         </div>
