--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,7 @@
     script(src='js/respond.min.js')
     -->
     <!-- stylesheet-->
+    <link href="scss/flexslider.css" type="text/css" rel="stylesheet">
     <link href="scss/bootstrap.min.css" type="text/css" rel="stylesheet">
     <link href="scss/style.css" type="text/css" rel="stylesheet">
   </head>
@@ -282,8 +283,9 @@
       </div>
     </div>
     <script src="js/jquery.min.js" type="text/javascript"></script>
-    <script src="js/jquery.bxslider.min.js" type="text/javascript"></script>
+    <script src="js/jquery.flexslider-min.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="js/jquery.bxslider.min.js" type="text/javascript"></script>
     <script src="js/jquery.slicknav.min.js" type="text/javascript"></script>
     <script src="js/script.js" type="text/javascript"></script>
   </body>
