--- a/html/layout.html
+++ b/html/layout.html
@@ -10,8 +10,8 @@
     script(src='js/respond.min.js')
     -->
     <!-- stylesheet-->
-    <link href="scss/flexslider.css" type="text/css" rel="stylesheet">
     <link href="scss/bootstrap.min.css" type="text/css" rel="stylesheet">
+    <link href="http://cdn.jsdelivr.net/jquery.slick/1.4.1/slick.css" type="text/css" rel="stylesheet">
     <link href="scss/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
@@ -127,10 +127,10 @@
       </div>
     </div>
     <script src="js/jquery.min.js" type="text/javascript"></script>
-    <script src="js/jquery.flexslider-min.js" type="text/javascript"></script>
-    <script src="js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="http://cdn.jsdelivr.net/jquery.slick/1.4.1/slick.min.js" type="text/javascript"></script>
     <script src="js/jquery.bxslider.min.js" type="text/javascript"></script>
     <script src="js/jquery.slicknav.min.js" type="text/javascript"></script>
+    <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/script.js" type="text/javascript"></script>
   </body>
 </html>
