--- a/html/services.html
+++ b/html/services.html
@@ -10,8 +10,8 @@
     script(src='js/respond.min.js')
     -->
     <!-- stylesheet-->
-    <link href="scss/flexslider.css" type="text/css" rel="stylesheet">
     <link href="scss/bootstrap.min.css" type="text/css" rel="stylesheet">
+    <link href="http://cdn.jsdelivr.net/jquery.slick/1.4.1/slick.css" type="text/css" rel="stylesheet">
     <link href="scss/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
@@ -211,7 +211,7 @@
                     </li>
                   </ul>
                   <ul class="image-content col-md-7">
-                    <div id="service-two-slider" data-ride="carousel" class="carousel slide">
+                    <div id="service-two-slider" data-ride="carousel" data-interval="false" class="carousel slide">
                       <ol class="carousel-indicators">
                         <li data-target="#service-two-slider" data-slide-to="0" class="active"></li>
                         <li data-target="#service-two-slider" data-slide-to="1"></li>
@@ -284,14 +284,16 @@
                     </li>
                   </ul>
                   <ul class="image-content col-md-6"><img src="images/catering-fryer.png"></ul>
-                  <div style="display: none" class="logo-slider col-md-12">
-                    <ul class="slides">
-                      <li><img src="images/slide-1.jpg"></li>
-                      <li><img src="images/slide-1.jpg"></li>
-                      <li><img src="images/slide-1.jpg"></li>
-                      <li><img src="images/slide-1.jpg"></li>
-                      <li><img src="images/slide-1.jpg"></li>
-                    </ul>
+                  <div class="slide-logo col-md-12">
+                    <div><img src="images/slide-logo-1.jpg"></div>
+                    <div><img src="images/slide-logo-2.jpg"></div>
+                    <div><img src="images/slide-logo-3.jpg"></div>
+                    <div><img src="images/slide-logo-1.jpg"></div>
+                    <div><img src="images/slide-logo-2.jpg"></div>
+                    <div><img src="images/slide-logo-3.jpg"></div>
+                    <div><img src="images/slide-logo-1.jpg"></div>
+                    <div><img src="images/slide-logo-2.jpg"></div>
+                    <div><img src="images/slide-logo-3.jpg"></div>
                   </div>
                 </div>
               </div>
@@ -310,10 +312,10 @@
       </div>
     </div>
     <script src="js/jquery.min.js" type="text/javascript"></script>
-    <script src="js/jquery.flexslider-min.js" type="text/javascript"></script>
-    <script src="js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="http://cdn.jsdelivr.net/jquery.slick/1.4.1/slick.min.js" type="text/javascript"></script>
     <script src="js/jquery.bxslider.min.js" type="text/javascript"></script>
     <script src="js/jquery.slicknav.min.js" type="text/javascript"></script>
+    <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/script.js" type="text/javascript"></script>
   </body>
 </html>
