use each in service page

--- a/html/services.html
+++ b/html/services.html
@@ -120,7 +120,7 @@
         <div class="container">
           <h1 class="title">services</h1>
           <ul class="nav nav-pills nav-justified services-list">
-            <li class="active"><a href="#stainless-steel-fabrication" data-toggle="pill">
+            <li><a href="#stainless-steel-fabrication" data-toggle="pill">
                 <h4 class="sub-title"><span>stainless steel fabrication</span></h4></a>
               <div class="traingle"></div>
             </li>
@@ -137,7 +137,7 @@
               <div class="traingle"></div>
             </li>
             <li><a href="#design-consilation" data-toggle="pill">
-                <h4 class="sub-title"><span>design & consilation</span></h4></a>
+                <h4 class="sub-title"><span>design &amp; consilation</span></h4></a>
               <div class="traingle"></div>
             </li>
           </ul>
