use each in service page

--- a/html/services.html
+++ b/html/services.html
@@ -120,7 +120,7 @@
         <div class="container">
           <h1 class="title">services</h1>
           <ul class="nav nav-pills nav-justified services-list">
-            <li class="active"><a href="#stainless-steel-fabrication" data-toggle="pill">
+            <li><a href="#stainless-steel-fabrication" data-toggle="pill">
                 <h4 class="sub-title"><span>stainless steel fabrication</span></h4></a>
               <div class="traingle"></div>
             </li>
@@ -137,7 +137,7 @@
               <div class="traingle"></div>
             </li>
             <li><a href="#design-consilation" data-toggle="pill">
-                <h4 class="sub-title"><span>design & consilation</span></h4></a>
+                <h4 class="sub-title"><span>design &amp; consilation</span></h4></a>
               <div class="traingle"></div>
             </li>
           </ul>
@@ -154,61 +154,50 @@
               </ul>
               <div class="tab-content col-md-9">
                 <div class="tab-pane active tab-landing">
-                  <div class="text-content col-md-5">
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque psa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+                  <div class="content-pane">
+                    <div class="img_thumnail"><img src="images/stainless-steel-fabrication-landing.jpg"></div>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque psa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
                   </div>
-                  <div class="image-content col-md-7"><img src="images/stainless-steel-fabrication-landing.jpg"></div>
                 </div>
                 <div id="service-one" class="tab-pane">
-                  <ul class="text-content col-md-5">
-                    <li><span class="dot">.</span>
-                      <p>Sed ut perspiciatis unde omnis iste natus error sit</p>
-                    </li>
-                    <li><span class="dot">.</span>
-                      <p>voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque</p>
-                    </li>
-                    <li><span class="dot">.</span>
-                      <p>psa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-                    </li>
-                  </ul>
-                  <ul class="image-content col-md-7">
-                    <div id="service-one-slider" data-ride="carousel" data-interval="false" class="carousel slide">
-                      <ol class="carousel-indicators">
-                        <li data-target="#service-one-slider" data-slide-to="0" class="active"></li>
-                        <li data-target="#service-one-slider" data-slide-to="1"></li>
-                        <li data-target="#service-one-slider" data-slide-to="2"></li>
-                      </ol>
-                      <div class="carousel-inner">
-                        <div class="item active"><img src="images/stainless-steel-subservice1.png" alt="...">
-                          <div class="carousel-caption">
-                            <label>Client Name</label><span>2014</span>
+                  <div class="content-pane">
+                    <ul class="image-content">
+                      <div id="service-one-slider" data-ride="carousel" data-interval="false" class="carousel slide">
+                        <ol class="carousel-indicators">
+                          <li data-target="#service-one-slider" data-slide-to="0" class="active"></li>
+                          <li data-target="#service-one-slider" data-slide-to="1"></li>
+                          <li data-target="#service-one-slider" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                          <div class="item active"><img src="images/stainless-steel-subservice1.png" alt="...">
+                            <div class="carousel-caption">
+                              <label>Client Name</label><span>2014</span>
+                            </div>
                           </div>
-                        </div>
-                        <div class="item"><img src="images/stainless-steel-subservice1.png" alt="...">
-                          <div class="carousel-caption">
-                            <label>Client Name</label><span>2014</span>
+                          <div class="item"><img src="images/stainless-steel-subservice1.png" alt="...">
+                            <div class="carousel-caption">
+                              <label>Client Name</label><span>2014</span>
+                            </div>
                           </div>
-                        </div>
-                        <div class="item"><img src="images/stainless-steel-subservice1.png" alt="...">
-                          <div class="carousel-caption">
-                            <label>Client Name</label><span>2014</span>
+                          <div class="item"><img src="images/stainless-steel-subservice1.png" alt="...">
+                            <div class="carousel-caption">
+                              <label>Client Name</label><span>2014</span>
+                            </div>
                           </div>
                         </div>
                       </div>
-                    </div>
-                  </ul>
+                    </ul>
+                    <ul>
+                      <li>Sed ut perspiciatis unde omnis iste natus error sit</li>
+                      <li>voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque</li>
+                      <li>psa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</li>
+                    </ul>
+                  </div>
                 </div>
                 <div id="service-two" class="tab-pane">
                   <ul class="text-content col-md-5">
-                    <li><span class="dot">.</span>
-                      <p>Sed ut perspiciatis unde omnis iste natus error sit</p>
-                    </li>
-                    <li><span class="dot">.</span>
-                      <p>voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque</p>
-                    </li>
-                    <li><span class="dot">.</span>
-                      <p>psa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-                    </li>
+                    <li>Sed ut perspiciatis unde omnis iste natus error sit</li>
+                    <li>voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque</li>
+                    <li>psa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</li>
                   </ul>
                   <ul class="image-content col-md-7">
                     <div id="service-two-slider" data-ride="carousel" data-interval="false" class="carousel slide">
@@ -251,10 +240,7 @@
               </ul>
               <div class="tab-content col-md-9">
                 <div class="tab-pane active tab-landing">
-                  <div class="text-content col-md-5">
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque psa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-                  </div>
-                  <div class="image-content col-md-7"><img src="images/catering-landing.jpg"></div>
+                  <div class="content-pane"><img src="images/catering-landing.jpg">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque psa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</div>
                 </div>
                 <div id="catering-one" class="tab-pane">
                   <ul class="text-content col-md-6">
